# GraDe-A

./: CMakeLists.txt  INSTALL.txt  README.txt
lib/: README.txt
src/: Atom.cpp  Atom.h  AtomBox.cpp  AtomBox.h  AtomContainer.cpp  AtomContainer.h  AtomIdList.cpp  AtomIdList.h  AtomPropertyList.cpp  AtomPropertyList.h  ComputationManager.cpp  ComputationManager.h  ContainerData.cpp  ContainerData.h  CubicLattices.cpp  CubicLattices.h  GlobalMethods.cpp  GradeA_Defs.h  GradeA_Version.cpp  GradeA_Version.h  Grain.cpp  Grain.h  GrainData.cpp  GrainData.h  GrainIDMapper.cpp  GrainIDMapper.h  GrainIdentificator.cpp  GrainIdentificator.h  GrainTracker.cpp  GrainTracker.h  MeanOrientation.cpp  MeanOrientation.h  Orientation.cpp  Orientation.h  OrientationMath.cpp  OrientationMath.h  Orientator.cpp  Orientator.h  OrientatorFileQueue.cpp  OrientatorFileQueue.h  (+2 more)
src/io/: AtomIO.cpp  AtomIO.h  CFGEditor.cpp  CFGEditor.h  CFGHeaderData.cpp  CFGHeaderData.h  CFGImporter.cpp  CFGImporter.h  CSVTableReader.cpp  CSVTableReader.h  CSVTableWriter.cpp  CSVTableWriter.h  FileEditor.cpp  FileEditor.h  FileImporter.cpp  FileImporter.h  GrainCSVFileFormat.cpp  GrainCSVFileFormat.h  GrainTimeEvolutionWriter.cpp  GrainTimeEvolutionWriter.h
src/main/: GradeA_Main.cpp
